# deta

./: .gitignore  LICENSE  README.md  Spacefile  deta.json  main.py  pyproject.toml  requirements.txt
.deta/: prog_info  state
aiogram_deta/: storage.py
aiogram_deta/bot/: __init__.py  dispatcher.py  fsm.py
aiogram_deta/fastapi/: __init__.py  app.py  router.py  stubs.py
aiogram_deta/space/: __init__.py  base.py
aiogram_deta/web/: __init__.py  factory.py  webhook.py
bot/: __init__.py
bot/filters/: trigger.py
bot/handlers/: __init__.py  triggers.py
example/: .gitignore  README.md  main.py  requirements.txt
example/.deta/: prog_info  state
example/app/bot/: factory.py
example/app/bot/handlers/: echo.py
example/app/web/: factory.py
example/app/web/routes/: webhook.py
example_bot/bot/: factory.py
example_bot/bot/handlers/: form.py
example_bot/web/: factory.py
example_bot/web/routes/: webhook.py
example_project/: Spacefile  requirements.txt
example_project/src/: __main__.py
example_project/src/filters/: __init__.py
example_project/src/handlers/: __init__.py  echo.py  language_form.py  triggers.py
example_project/src/utils/: config.py
