[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiogram-deta"
description = 'aiogram Deta.space integration'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = [
    "aiogram",
    "deta",
]
authors = [
    { name = "Alex Root Junior", email = "jroot.junior@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "aiogram>=3.0.0rc1,<4",
    "deta[async]>=1.2.0,<2",
    "fastapi>=0.101.1,<1",
    "uvicorn>=0.23.2,<1"
]
dynamic = ["version"]

[project.optional-dependencies]

[project.urls]
Documentation = "https://github.com/aiogram/deta#readme"
Issues = "https://github.com/aiogram/deta/issues"
Source = "https://github.com/aiogram/deta"

[tool.hatch.version]
path = "aiogram_deta/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "example_bot",
    "main.py",
    ".deta",
]